Closed Bug 620114 Opened 15 years ago Closed 15 years ago

File size of pluginreg.dat increases steadily when I toggle enable/disable plug-ins

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Windows 7
defect
Not set
critical

Tracking

(blocking2.0 betaN+)

RESOLVED FIXED
mozilla2.0
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: alice0775, Assigned: jaas)

References

Details

(Keywords: perf, regression)

Attachments

(1 file)

Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b9pre) Gecko/20101217 Firefox/4.0b9pre ID:20101217030324 And Mozilla/5.0 (Windows NT 5.1; rv:2.0b9pre) Gecko/20101218 Firefox/4.0b9pre ID:20101218030347 This may be related to Bug 620103. File size of pluginreg.dat increases steadily when I toggle enable/disable plug-ins. *Uninstall/Re-install Silverlight does not help. *Silverlight plug-in works well. In pluginreg.dat, The same lines increase. [INVALID] c:\Program Files\Microsoft Silverlight\4.0.51204.0\npctrlui.dll|$ 1291395852000|$ c:\Program Files\Microsoft Silverlight\4.0.51204.0\npctrlui.dll|$ 1291395852000|$ . . . Reproducible: Always Steps to Reproduce: 1. Start Minefield with new profile + Silverlight and other plug-ins 2. Open Add-ons Manager, and select "Plug-ins" pane 3. Toggle enable/disable any plug-ins Actual Results: File size of pluginreg.dat increases steadily. Expected Results: File size of pluginreg.dat should not increase. Regression window(cached hourly): Works: http://hg.mozilla.org/mozilla-central/rev/2a75c2355ae9 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101209 Firefox/4.0b8pre ID:20101210100952 Fails: http://hg.mozilla.org/mozilla-central/rev/b48addc64c2f Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101210 Firefox/4.0b8pre ID:20101210102726 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2a75c2355ae9&tochange=b48addc64c2f
blocking2.0: --- → ?
blocking2.0: ? → beta9+
Assignee: nobody → joshmoz
Attached patch fixSplinter Review
This may fix the crasher too
Attachment #498865 - Flags: review?(joshmoz)
Attachment #498865 - Flags: review?(joshmoz) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
As per today's meeting, beta 9 will be a time-based release. Marking these all betaN+. Please move it back to beta9+ if you believe it MUST be in the next beta (ie: trunk is in an unshippable state without this)
blocking2.0: beta9+ → betaN+
No longer blocks: 616271
i would hope this would be fixed in beta 9 considering it can hang and crash firefox.
(In reply to comment #6) > i would hope this would be fixed in beta 9 considering it can hang and crash > firefox. it's fixed. Christian Legnitto's script went crazy.
ah, be careful with those scripts, last thing we want is skynet going live. :)
Blocks: 616271
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: