Bug 620114 - File size of pluginreg.dat increases steadily r=josh a=blocking-betaN